--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "sonar": "node sonar-scanner.js",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "quality": "npm run test && npm run sonar"
   },
   "jest": {
     "testEnvironment": "node",
